--- a/Hw38/Hw38.vcxproj.filters
+++ b/Hw38/Hw38.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Hw38.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Request.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Request.h">
