--- a/Hw38/Hw38.vcxproj
+++ b/Hw38/Hw38.vcxproj
@@ -125,9 +125,11 @@
   <ItemGroup>
     <ClCompile Include="Hw38.cpp" />
     <ClCompile Include="Request.cpp" />
+    <ClCompile Include="RequestManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Request.h" />
+    <ClInclude Include="RequestManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
